now with hollie's column names

--- a/_site.yml
+++ b/_site.yml
@@ -14,18 +14,18 @@ navbar:
           href: "outcome-analysis-pain.html"
         - text: "substantial pain"
           href: "outcome-analysis-substantial-pain.html"
-        - text: "moderate pain"
-          href: "outcome-analysis-moderate-pain.html"
-        - text: "pgic"
-          href: "outcome-analysis-pgic.html"
+        # - text: "moderate pain"
+        #   href: "outcome-analysis-moderate-pain.html"
+        # - text: "pgic"
+        #   href: "outcome-analysis-pgic.html"
         - text: "mood"
           href: "outcome-analysis-mood.html"
-        - text: "sleep"
-          href: "outcome-analysis-sleep.html"
-        # - text: "phyical function"
-          # href: "outcome-analysis-phyical-function.html"
-        - text: "qol"
-          href: "outcome-analysis-qol.html"
+        # - text: "sleep"
+        #   href: "outcome-analysis-sleep.html"
+        # - text: "physical function"
+        #   href: "outcome-analysis-physical-function.html"
+        # - text: "qol"
+        #   href: "outcome-analysis-qol.html"
   right:
     - text: "covidence"
       href: covidence.html
